--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "orator-blank",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
+  "main": "expo/AppEntry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +10,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.20",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5"
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "expo": "~54.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-web": "0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
-  },
-  "private": true
+  }
 }
